# redis-manager

./: .gitignore  CHANGELOG.md  README.md  package-lock.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  redis_client.rs
src-tauri/src/commands/: connection.rs  keys.rs  mod.rs
src/lib/: types.ts
src/lib/components/: ConnectionForm.svelte  Console.svelte  KeyBrowser.svelte  KeyDetail.svelte  SearchBar.svelte  Sidebar.svelte
src/lib/stores/: redis.ts
src/routes/: +page.svelte
