[package]
name = "redis-manager"
version = "0.1.2"
description = "Redis Manager - A lightweight Redis management tool"
authors = ["you"]
edition = "2021"

[lib]
name = "redis_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "cluster-async"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
